# GeoNormPy

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  INSTALL.bat  LICENSE  README.md  RUN.bat  pyproject.toml  run_GeoNormPy.py
.github/workflows/: publish-pypi.yml  python-package.yml
config/: workflow.yaml
data/: test_data.csv
docs/methods/: Algoritmo_GeoNormPy_Completo.docx  Algoritmo_GeoNormPy_Completo.md  Auditoria_CIPW_Sesion_2026-04-10.md
docs/theory/: 1 Principio rector.docx  2 EL PROBLEMA REAL.docx  3 PASO 1.docx  4 PASO 2.docx  5 PASO 3.docx  6 PASO 4.docx  7 PSEUDOCODIGO.docx
geonormpy/: __init__.py  cli.py  schema.py
geonormpy/core/: chemistry.py  constants.py  minerals.py
geonormpy/norms/: batch.py  cipw.py
notebooks/: useful commmands.docx
tests/: conftest.py  test_cipw.py  test_cipw_robustness.py  test_cli.py  test_workflow_config.py
