[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geonormpy"
version = "0.1.0"
authors = [
  { name = "Jordan Angel Luciano Zavaleta Reyes", email = "jordanzav@gisgeo.dev" },
]
description = "Motor de calculo para mineralogia normativa CIPW y geoquimica ignea."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.5.0",
]

[tool.setuptools]
packages = ["geonormpy", "geonormpy.core", "geonormpy.norms"]
