[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geonormpy"
version = "0.1.1"
authors = [
  { name = "Jordan Angel Luciano Zavaleta Reyes", email = "jordanzav@gisgeo.dev" },
]
description = "Python engine for CIPW normative mineralogy and igneous geochemistry workflows."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["geochemistry", "petrology", "cipw", "mineralogy", "igneous-rocks"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.5.0",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/jordan-zav/GeoNormPy"
Repository = "https://github.com/jordan-zav/GeoNormPy"
Issues = "https://github.com/jordan-zav/GeoNormPy/issues"

[project.scripts]
geonormpy = "geonormpy.cli:main"

[tool.setuptools]
packages = ["geonormpy", "geonormpy.core", "geonormpy.norms"]
